# borgmatic-exporter

./: .pylintrc  Dockerfile  LICENSE.md  Makefile  README.md  pyproject.toml  requirements.txt  supervisord.conf
.github/: build.yml
.github/workflows/: build.yml
observability/: grafana-dashboard.json  prometheus-alert.yaml
root/etc/s6-overlay/s6-rc.d/svc-exporter/: run
src/: cli.py  http_server.py  metrics.py
tests/: test_cli.py  test_http.py  test_metrics.py
tests/data/: list-info.json  repo-info.json
