[tool.poetry]
name = "borgmatic-exporter"
version = "0.2.0"
description = ""
authors = [
    "Maxim Mityutko <m@brhd.io>",
    "Dani Hodovic <dani.hodovic@gmail.com>"
]
packages = [{include = "src"}]

[tool.poetry.scripts]
borgmatic-exporter = 'src.cli:cli'

[tool.poetry.dependencies]
python = "<3.14,>=3.13"
prometheus-client = "<0.21.0,>=0.19.0"
click = "^8.1.7"
pretty-errors = "^1.2.19"
loguru = "^0.7.3"
Flask = "^3.1.1"
Jinja2 = "<3.2.0,>=3.1.6"
waitress = "<4.0.0,>=3.0.1"
werkzeug = "^3.1.3"
arrow = "^1.3.0"
timy = "^0.4.2"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.3"
pytest = "^7.4.4"
black = "^24.3.0"
isort = "^6.0.1"
jedi = "^0.18.0"
requests = "^2.25.1"
pytest-cov = "^2.11.1"
pytest-mock = "^3.5.1"


[build-system]
requires = ["poetry-core>=1.8.1"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
source = [
    "src"
]
omit = [
    ".venv/*",
    ".virtualenv/*",
    "tests/"
]

[tool.coverage.report]
fail_under = 70

[tool.coverage.html]
directory = ".html"

[tool.black]
skip_numeric_underscore_normalization = true
exclude = ".*(venv|virtualenv|migrations|node_modules|s3)"

[tool.isort]
profile = "black"
multi_line_output = 3
skip = '.virtualenv,.venv'
